<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Style</string>
    <string name="logo">Логотип</string>
    <string name="name_salon">Салон красоты \n \"СТИЛЬ\"</string>
    <string name="s_hair">Волосы</string>
    <string name="s_nails">Ногти</string>
    <string name="address">Адрес</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_delete">MainActivityDelete</string>
    <string name="title_activity_main_activitytodel">MainActivitytodel</string>

</resources>